# inertia

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
site/: index.html  style.css
site/demo/: index.html  inertia-tui-e457420252af5f03.js  inertia-tui-e457420252af5f03_bg.wasm
src/: app.rs  cloth.rs  collider.rs  event.rs  fluid.rs  input.rs  lib.rs  main.rs  menu.rs  nbody.rs  physics.rs  web.rs
src/render/: camera.rs  mod.rs  projection.rs  shapes.rs
